Git Tests/force-app/main/default/default/objects/UserCustomization__c/UserCustomization__c.object-meta.xml
<CustomObject>
    <description>Usado inicialmente para salvar os filtros customizados na tela de orçamentos do portal, posteriormente pode vir a ser usado para outros fins.</description>
    <label>UserCustomization</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserCustomizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>