Git Tests/force-app/main/default/default/objects/UserCustomization__c/fields/BudgetTabFilters__c.field-meta.xml
<CustomField>
    <fullName>BudgetTabFilters__c</fullName>
    <description>Filtros customizados da tela de orçamentos do portal.</description>
    <label>BudgetTabFilters</label>
    <length>4095</length>
    <type>LongTextArea</type>
</CustomField>