Git Tests/force-app/main/default/default/objects/UserCustomization__c/fields/StandardFilter__c.field-meta.xml
<CustomField>
    <fullName>StandardFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>marca os filtros padrões da budgetTab para todos os usuários</description>
    <label>StandardFilter</label>
    <type>Checkbox</type>
</CustomField>